# KursarScript

./: .gitmessage  .img  LICENSE  README.md  index.html  pyproject.toml  requirements  setup.py
docs/: ROADMAP.md
examples/: advanced.kursar  classes.kursar  economy.kursar  hello_world.kursar  test.kursar
kursarscript/: __init__.py  __main__.py  cli.py  compiler.py  interpreter.py  runtime.py
src/: kursarscipt-compiler.py  kursarscript-__init__.py  kursarscript-interpreter.py
tests/: test_kursarscript.py
