[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kursarscript"
version = "1.0.0"
description = "KursarScript (KSPL) - A virtual reality and digital-economy programming language"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "KursarScript Team"}
]
keywords = ["virtual-reality", "vr", "programming-language", "digital-economy", "metaverse"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Interpreters",
]
requires-python = ">=3.7"
dependencies = []

[project.optional-dependencies]
vr = [
    "pygame>=2.0.0",
    "numpy>=1.21.0",
]
graphics = [
    "pyglet>=1.5.0",
    "pyrr>=0.10.0",
]
web = [
    "flask>=2.0.0",
    "websockets>=10.0",
]
dev = [
    "pytest>=6.0.0",
    "black>=21.0.0",
    "flake8>=4.0.0",
    "mypy>=0.900",
]
full = [
    "pygame>=2.0.0",
    "numpy>=1.21.0",
    "flask>=2.0.0",
    "websockets>=10.0",
]

[project.scripts]
kursarscript = "kursarscript.cli:main"

[project.urls]
Homepage = "https://github.com/Infinite-Networker/KursarScript"
Repository = "https://github.com/Infinite-Networker/KursarScript"
Issues = "https://github.com/Infinite-Networker/KursarScript/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["kursarscript*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
